common-applications/test-environment/opengauss-website-docs/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: opengauss-website-docs
  name: opengauss-website-docs
