common-applications/test-environment/opengauss-website-docs/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: opengauss-website-docs
spec:
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      nodeSelector:
        kubernetes.ops.filesystem.plus: "true"
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: website
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/opengauss/website-docs-test:v1.0.20221012104347
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 500Mi
