common-applications/test-environment/opengauss-website-docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: opengauss-website-docs
spec:
  ports:
  - name: https-port
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: website
  type: ClusterIP
