common-applications/test-environment/opengauss-website-docs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Content-Type-Options "nosniff";
      add_header X-XSS-Protection "1; mode=block";
      add_header X-Frame-Options "DENY";
      add_header Cache-Control "no-cache";
      add_header Pragma "no-cache";
  name: opengauss-docs-ingress
  namespace: opengauss-website-docs
spec:
  tls:
    - hosts:
      - opengauss-docs.test.osinfra.cn
      secretName: opengauss-docs-tls
  rules:
    - host: opengauss-docs.test.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: website-service
            servicePort: 8080
          path: /
